allow uploading dlc files straight to queue
